Added tests for ShoppingCart and MyFunctions::Add

--- a/Tests_ShoppingCart/Tests_ShoppingCart.vcxproj.filters
+++ b/Tests_ShoppingCart/Tests_ShoppingCart.vcxproj.filters
@@ -15,18 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ADS_TDD_ShoppingCart.cpp">
+    <ClCompile Include="Tests_ShoppingCart.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Tests_MyFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Book.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ShoppingCart.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="myFunctions.h">
+    <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
